--- a/serverless.yml
+++ b/serverless.yml
@@ -16,6 +16,7 @@ provider:
   name: aws
   runtime: nodejs12.x
   stage: prod # optional, default: dev
+  profile: devProfile
   region: ap-northeast-1 # optional, default: us-east-1
   apiGateway:
     minimumCompressionSize: 1024
