--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
+    "serverless-offline": "^6.8.0",
     "serverless-plugin-cloudwatch-dashboard": "^1.2.0",
     "xml-js": "^1.6.11"
   },
