--- a/serverless.yml
+++ b/serverless.yml
@@ -15,7 +15,7 @@ dashboard:
 provider:
   name: aws
   runtime: nodejs12.x
-  stage: dev # optional, default: dev
+  stage: test # optional, default: dev
   profile: devProfile
   region: ap-northeast-1 # optional, default: us-east-1
   apiGateway:
