test branch add

--- a/serverless.yml
+++ b/serverless.yml
@@ -18,6 +18,7 @@ provider:
   stage: test # optional, default: dev
   profile: testProfile
   region: ap-northeast-1 # optional, default: us-east-1
+  stackName: chikachika-serverless-${self:provider.stage} # Use a custom name for the CloudFormation stack
   apiGateway:
     shouldStartNameWithService: true,
     minimumCompressionSize: 1024
