--- a/serverless.yml
+++ b/serverless.yml
@@ -18,6 +18,8 @@ provider:
   stage: dev # optional, default: dev
   profile: devProfile
   region: ap-northeast-1 # optional, default: us-east-1
+  stackName: chikachika-API-serverless-${self:provider.stage} # Use a custom name for the CloudFormation stack
+  apiName: chikachika-API-serverless-${self:provider.stage} # Use a custom name for the API Gateway API
   apiGateway:
     shouldStartNameWithService: true,
     minimumCompressionSize: 1024
