--- a/serverless.yml
+++ b/serverless.yml
@@ -21,7 +21,7 @@ provider:
   stackName: chikachika-API-serverless-${self:provider.stage} # Use a custom name for the CloudFormation stack
   apiName: chikachika-API-serverless-${self:provider.stage} # Use a custom name for the API Gateway API
   apiGateway:
-    #shouldStartNameWithService: true,
+    shouldStartNameWithService: true,
     minimumCompressionSize: 1024
     binaryMediaTypes:
       - 'multipart/form-data'
