--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "iconv-lite": "^0.6.2",
     "js-base64": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "mysql2": "^2.2.5",
