--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.0",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "geojson": "^0.5.0",
     "iconv-lite": "^0.6.2",
     "js-base64": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
