거주지 검색 API 라우트 수정

--- a/serverless.yml
+++ b/serverless.yml
@@ -217,11 +217,11 @@ functions:
           path: socialUserCheck
           method: post
           cors: true
-  findCities:
-    handler: services/residence.findCities
+  searchCities:
+    handler: services/residence.searchCities
     events:
       - http:
-          path: residence/cities
+          path: search/cities
           method: get
           cors: true
           authorizer:
