리뷰, 수다방 게시글 좋아요 추가, 취소, 프로필에서 확인 API

--- a/serverless.yml
+++ b/serverless.yml
@@ -282,6 +282,58 @@ functions:
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
               resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+  addLikeReview:
+    handler: services/like.addLikeReview
+    events:
+      - http:
+          path: like/review
+          method: post
+          cors: true
+          authorizer:
+              name: verify-token
+              # this tells the lambda where to take the information from,
+              # in our case the HTTP Authorization header
+              identitySource: method.request.header.Authorization
+              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+  removeLikeReview:
+    handler: services/like.removeLikeReview
+    events:
+      - http:
+          path: like/review
+          method: delete
+          cors: true
+          authorizer:
+              name: verify-token
+              # this tells the lambda where to take the information from,
+              # in our case the HTTP Authorization header
+              identitySource: method.request.header.Authorization
+              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+  addLikeCommunity:
+    handler: services/like.addLikeCommunity
+    events:
+      - http:
+          path: like/communityPost
+          method: post
+          cors: true
+          authorizer:
+              name: verify-token
+              # this tells the lambda where to take the information from,
+              # in our case the HTTP Authorization header
+              identitySource: method.request.header.Authorization
+              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+  removeLikeCommunity:
+    handler: services/like.removeLikeCommunity
+    events:
+      - http:
+          path: like/communityPost
+          method: delete
+          cors: true
+          authorizer:
+              name: verify-token
+              # this tells the lambda where to take the information from,
+              # in our case the HTTP Authorization header
+              identitySource: method.request.header.Authorization
+              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
   importDentalClinic:
     handler: services/dentalClinic.importDentalClinic
     package:
