--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.0",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "fast-xml-parser": "^3.17.6",
     "geojson": "^0.5.0",
     "iconv-lite": "^0.6.2",
     "js-base64": "^3.6.0",
@@ -26,6 +27,7 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "mysql2": "^2.2.5",
+    "request": "^2.88.2",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
     "serverless-offline": "^6.8.0",
