로그인, 회원가입 사용자 정보 응답 본문에 추가

--- a/serverless.yml
+++ b/serverless.yml
@@ -428,6 +428,13 @@ functions:
           path: dbUpdate
           method: get
           cors: true
+  duplicateNameClinics:
+    handler: services/dentalClinic.duplicateNameClinics
+    events:
+      - http:
+          path: duplicateNameClinics
+          method: get
+          cors: true
 plugins:
   - serverless-offline
   - serverless-apigw-binary
