--- a/serverless.yml
+++ b/serverless.yml
@@ -224,6 +224,13 @@ functions:
           path: search/cities
           method: get
           cors: true
+  citiesBycurrentLocation:
+    handler: services/residence.citiesBycurrentLocation
+    events:
+      - http:
+          path: search/cities/currentLocation
+          method: get
+          cors: true
   addUserResidence:
     handler: services/residence.addUserResidence
     events:
