병원 상세보기

--- a/serverless.yml
+++ b/serverless.yml
@@ -387,6 +387,19 @@ functions:
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
               resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+  detailClinics:
+    handler: services/dentalClinic.detailClinics
+    events:
+      - http:
+          path: clinic/detail
+          method: get
+          cors: true
+          authorizer:
+              name: verify-token
+              # this tells the lambda where to take the information from,
+              # in our case the HTTP Authorization header
+              identitySource: method.request.header.Authorization
+              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
   importDentalClinic:
     handler: services/dentalClinic.importDentalClinic
     package:
