--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "express": "^4.17.1",
     "fast-xml-parser": "^3.17.6",
     "geojson": "^0.5.0",
+    "iconv": "^3.0.0",
     "iconv-lite": "^0.6.2",
     "js-base64": "^3.6.0",
+    "jschardet": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "multer": "^1.4.2",
