--- a/serverless.yml
+++ b/serverless.yml
@@ -58,6 +58,19 @@ functions:
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
               resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+  getUserInfo:
+    handler: services/user.getUserInfo
+    events:
+      - http:
+          path: userInfo
+          method: get
+          cors: true
+          authorizer:
+              name: verify-token
+              # this tells the lambda where to take the information from,
+              # in our case the HTTP Authorization header
+              identitySource: method.request.header.Authorization
+              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
   allTagItems:
     handler: services/search.allTagItems
     events:
