소셜 로그인 overlapSocialUser

--- a/serverless.yml
+++ b/serverless.yml
@@ -475,6 +475,13 @@ functions:
           path: specialTreatment
           method: post
           cors: true
+  newTownCity:
+    handler: services/dbReset.newTownCity
+    events:
+      - http:
+          path: newTownCity
+          method: post
+          cors: true
 plugins:
   - serverless-offline
   - serverless-apigw-binary
