--- a/serverless.yml
+++ b/serverless.yml
@@ -123,8 +123,8 @@ functions:
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
               resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
-  localClinicSearch:
-    handler: services/search.localClinicSearch
+  keywordClinicSearch:
+    handler: services/search.keywordClinicSearch
     events:
       - http:
           path: clinics
