--- a/serverless.yml
+++ b/serverless.yml
@@ -478,6 +478,19 @@ functions:
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
               resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+  updateNotificationConfig:
+    handler: services/setting.updateNotificationConfig
+    events:
+      - http:
+          path: notificationConfig
+          method: put
+          cors: true
+          authorizer:
+              name: verify-token
+              # this tells the lambda where to take the information from,
+              # in our case the HTTP Authorization header
+              identitySource: method.request.header.Authorization
+              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
   importDentalClinic:
     handler: services/dbReset.importDentalClinic
     package:
