병원 검색 휴일 쿼리 캐시 항목 추가

--- a/serverless.yml
+++ b/serverless.yml
@@ -198,6 +198,11 @@ functions:
           path: search/clinics
           method: get
           cors: true
+          caching:
+            enabled: true
+            ttlInSeconds: 3600 # overrides the global setting for ttlInSeconds
+            cacheKeyParameters:
+              - name: request.querystring.q
           authorizer:
               name: verify-token
               # this tells the lambda where to take the information from,
