--- a/serverless.yml
+++ b/serverless.yml
@@ -64,7 +64,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   getUserInfo:
     handler: services/user.getUserInfo
     events:
@@ -77,7 +77,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   allTagItems:
     handler: services/search.allTagItems
     events:
@@ -98,7 +98,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   getRecentSearch:
     handler: services/recentSearch.getRecent
     events:
@@ -111,7 +111,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   delRecentSearch:
     handler: services/recentSearch.delRecent
     events:
@@ -124,7 +124,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   reviewSearch:
     handler: services/search.reviews
     events:
@@ -137,7 +137,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   keywordClinicSearch:
     handler: services/search.keywordClinicSearch
     events:
@@ -164,7 +164,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   aroundClinics:
     handler: services/around.clinics
     events:
@@ -188,7 +188,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   treatmentSearch:
     handler: services/search.treatmentItems
     events:
@@ -201,7 +201,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   clinicSearch:
     handler: services/search.dentalClinics
     events:
@@ -219,7 +219,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   symptomSearch:
     handler: services/search.symptomItems
     events:
@@ -232,7 +232,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   login:
     handler: services/login.handler
     events:
@@ -326,7 +326,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   changeUserResidence:
     handler: services/residence.changeUserResidence
     events:
@@ -339,7 +339,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   deleteUserResidence:
     handler: services/residence.deleteUserResidence
     events:
@@ -352,7 +352,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   getUserResidence:
     handler: services/residence.getUserResidence
     events:
@@ -365,7 +365,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   nowUserResidence:
     handler: services/residence.userResidenceNow
     events:
@@ -378,7 +378,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   addLikeReview:
     handler: services/like.addLikeReview
     events:
@@ -391,7 +391,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   removeLikeReview:
     handler: services/like.removeLikeReview
     events:
@@ -404,7 +404,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   addLikeCommunity:
     handler: services/like.addLikeCommunity
     events:
@@ -417,7 +417,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   removeLikeCommunity:
     handler: services/like.removeLikeCommunity
     events:
@@ -430,7 +430,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   addScrapReview:
     handler: services/scrap.addScrapReview
     events:
@@ -443,7 +443,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   removeScrapeReview:
     handler: services/scrap.removeScrapReview
     events:
@@ -456,7 +456,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   addScrapCommunity:
     handler: services/scrap.addScrapCommunities
     events:
@@ -469,7 +469,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   removeScrapCommunity:
     handler: services/scrap.removeScrapCommunities
     events:
@@ -482,7 +482,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   addScrapClinic:
     handler: services/scrap.addScrapClinic
     events:
@@ -495,7 +495,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   removeScrapClinic:
     handler: services/scrap.removeScrapClinic
     events:
@@ -508,7 +508,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   detailClinics:
     handler: services/dentalClinic.detailClinics
     events:
@@ -516,12 +516,30 @@ functions:
           path: clinic/detail
           method: get
           cors: true
+          caching:
+            enabled: true
+            ttlInSeconds: 300 # overrides the global setting for ttlInSeconds
+            cacheKeyParameters:
+              - name: request.querystring.clinicId
           authorizer:
               name: verify-token
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
+  userScrapClinics:
+    handler: services/dentalClinic.userScrapClinics
+    events:
+      - http:
+          path: clinic/detail/scrap
+          method: get
+          cors: true
+          authorizer:
+              name: verify-token
+              # this tells the lambda where to take the information from,
+              # in our case the HTTP Authorization header
+              identitySource: method.request.header.Authorization
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   ClinicsReviews:
     handler: services/dentalClinic.clinicReviews
     events:
@@ -534,7 +552,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   updateNotificationConfig:
     handler: services/setting.updateNotificationConfig
     events:
@@ -547,7 +565,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   keywordClinicAutoComplete:
     handler: services/search.keywordClinicAutoComplete
     events:
@@ -565,7 +583,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
   redienceClinics:
     handler: services/around.redienceClinics
     events:
@@ -581,7 +599,7 @@ functions:
               # this tells the lambda where to take the information from,
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
-              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+              resultTtlInSeconds: 86400 #7776000 # cache the result for 90 day
 plugins:
   - serverless-offline
   - serverless-apigw-binary
