--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "serverless-api-gateway-caching": "^1.6.0",
     "serverless-offline": "^6.8.0",
     "serverless-plugin-cloudwatch-dashboard": "^1.2.0",
+    "serverless-webpack": "^5.3.5",
+    "webpack": "^5.16.0",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
