sqs 기초 taskworker,consumer 모듈 생성

--- a/serverless.yml
+++ b/serverless.yml
@@ -633,9 +633,9 @@ functions:
 resources:
   Resources:
     commentNotification:
-      Type: "AWS::SQS::Queue"
+      Type: AWS::SQS::Queue
       Properties:
-        QueueName: "commentNotification"
+        QueueName: commentNotification-${opt:stage, 'dev'}
 plugins:
   - serverless-offline
   - serverless-offline-sqs
