--- a/serverless.yml
+++ b/serverless.yml
@@ -49,6 +49,7 @@ provider:
     AWS_Access_Key_ID: ${param:AWS_Access_Key_ID}
     AWS_Secret_Access_Key: ${param:AWS_Secret_Access_Key}
     TZ: ${param:TZ}
+    stage: ${self:provider.stage}
   memorySize: 1024 # optional, in MB, default: 1024
   timeout: 6 # optional, in seconds, default: 6
   versionFunctions: false # optional, default: true
@@ -634,12 +635,20 @@ functions:
     handler: services/notificationTaskWorker.comment
     events:
       - sqs: arn:aws:sqs:ap-northeast-1:751612718299:commentNotification-${opt:stage, 'dev'}
+  pushNotifiactionReplyTaskWorker:
+    handler: services/notificationTaskWorker.reply
+    events:
+      - sqs: arn:aws:sqs:ap-northeast-1:751612718299:replyNotification-${opt:stage, 'dev'}
 resources:
   Resources:
     commentNotification:
       Type: "AWS::SQS::Queue"
       Properties:
         QueueName: commentNotification-${self:provider.stage}
+    replyNotification:
+      Type: "AWS::SQS::Queue"
+      Properties:
+        QueueName: replyNotification-${self:provider.stage}
     likeNotification:
       Type: "AWS::SQS::Queue"
       Properties:
@@ -654,3 +663,4 @@ plugins:
   - serverless-plugin-cloudwatch-dashboard
   - serverless-api-gateway-caching
   - serverless-plugin-ifelse
+  - serverless-offline-sqs
