--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "fast-xml-parser": "^3.17.6",
+    "firebase-admin": "^9.4.2",
     "geojson": "^0.5.0",
     "iconv": "^3.0.0",
     "iconv-lite": "^0.6.2",
