--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
-    "serverless-apigw-binary": "^0.4.4"
+    "serverless-apigw-binary": "^0.4.4",
+    "serverless-prune-plugin": "^1.4.3"
   }
 }
