--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "serverless-apigw-binary": "^0.4.4",
+    "serverless-offline-env": "^0.2.0",
     "serverless-prune-plugin": "^1.4.3"
   }
 }
