timezone moment 모듈 사용

--- a/serverless.yml
+++ b/serverless.yml
@@ -3,7 +3,7 @@ service: chikachika-API-serverless
 org: jiwon112
 
 custom:
-  #secrets: ${file(secrets.json)}
+  secrets: ${file(secrets.json)}
   apigwBinary:
     types:           #list of mime-types 
        - 'multipart/form-data'
@@ -46,8 +46,8 @@ provider:
     AWS_Secret_Access_Key: ${param:AWS_Secret_Access_Key}
     TZ: ${param:TZ}
     stage: ${self:provider.stage}
-    fcmBucketName: ${param:fcmBucketName}
-    fcmkey: ${param:fcmkey}
+    fcmBucketName: ${self:custom.secrets.fcmBucketName}
+    fcmkey: ${self:custom.secrets.fcmkey}
   memorySize: 1024 # optional, in MB, default: 1024
   timeout: 6 # optional, in seconds, default: 6
   versionFunctions: false # optional, default: true
