--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jschardet": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "mysql2": "^2.2.5",
