--- a/serverless.yml
+++ b/serverless.yml
@@ -48,6 +48,7 @@ provider:
     stage: ${self:provider.stage}
     fcmBucketName: ${param:fcmBucketName, self:custom.secrets.fcmBucketName}
     fcmkey: ${param:fcmkey, self:custom.secrets.fcmkey}
+    FbDBURL: ${param:fcmkey, self:custom.secrets.FbDBURL}
   memorySize: 1024 # optional, in MB, default: 1024
   timeout: 6 # optional, in seconds, default: 6
   versionFunctions: false # optional, default: true
@@ -622,6 +623,19 @@ functions:
       - http:
           path: notifications/{type}
           method: get
+          cors: true
+          authorizer:
+              name: verify-token
+              # this tells the lambda where to take the information from,
+              # in our case the HTTP Authorization header
+              identitySource: method.request.header.Authorization
+              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+  delNotifications:
+    handler: services/notification.delNotifications
+    events:
+      - http:
+          path: notifications
+          method: delete
           cors: true
           authorizer:
               name: verify-token
