--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "serverless-offline-sqs": "^4.1.1",
     "serverless-plugin-cloudwatch-dashboard": "^1.2.0",
     "serverless-plugin-ifelse": "^1.0.6",
+    "serverless-plugin-thundra": "^2.5.6",
     "serverless-webpack": "^5.3.5",
     "webpack": "^5.16.0",
     "xml-js": "^1.6.11"
