--- a/serverless.yml
+++ b/serverless.yml
@@ -86,6 +86,19 @@ functions:
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
               resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+  keywordSearchResults:
+    handler: services/search.keywordSearchResults
+    events:
+      - http:
+          path: search/{type}
+          method: get
+          cors: true
+          authorizer:
+              name: verify-token
+              # this tells the lambda where to take the information from,
+              # in our case the HTTP Authorization header
+              identitySource: method.request.header.Authorization
+              resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
   getUserProfile:
     handler: services/user.getUserProfile
     events:
