--- a/serverless.yml
+++ b/serverless.yml
@@ -673,6 +673,13 @@ functions:
               # in our case the HTTP Authorization header
               identitySource: method.request.header.Authorization
               resultTtlInSeconds: 0 #7776000 # cache the result for 90 day
+  dbReset:
+    handler: services/dbReset.communitiesTagArray
+    events:
+      - http:
+          path: dbReset
+          method: get
+          cors: true
   pushNotifiactionCommentTaskWorker:
     handler: services/notificationTaskWorker.comment
     events:
