--- a/serverless.yml
+++ b/serverless.yml
@@ -688,6 +688,10 @@ functions:
     handler: services/notificationTaskWorker.reply
     events:
       - sqs: arn:aws:sqs:ap-northeast-1:751612718299:replyNotification-${opt:stage, 'dev'}
+  pushNotifiactionLikeTaskWorker:
+    handler: services/notificationTaskWorker.like
+    events:
+      - sqs: arn:aws:sqs:ap-northeast-1:751612718299:likeNotification-${opt:stage, 'dev'}
 resources:
   Resources:
     commentNotification:
